@@ -1,0 +1,2 @@
+usr/lib/xulrunner-devel-*/bin/plugins /usr/lib/pcmanx-gtk2
+usr/lib/xulrunner-devel-*/bin/components /usr/lib/pcmanx-gtk2
